# finalproject_Mandrygina_Olga_M25-555

./: .gitignore  README.md  config.json  main.py  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  readme.txt  users.json
valutatrade_hub/: decorators.py  logging_config.py  logging_config.pyy.txt
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  usecases.txt  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
