[tool.poetry]
name = "finalproject-mandrygina-olga-m25-555"
version = "0.1.0"
description = "Valut Trade"
authors = ["bergeria <o74183047@gmail.com>"]
readme = "README.md"
packages = [ { include = "valutatrade_hub" }, ]


[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841"]



